# LoRA_Lab

./: .gitignore  README.md  environment.yml  notes.md  pyproject.toml  requirements.txt  summaries.md  themes.md
configs/: tasks.yaml
configs/matrix/: run-matrix.yaml
configs/phase05/: _fixed_protocol.yaml
configs/phase1/: heldout_split.yaml  library.yaml
configs/phase2/: eval-tests.yaml  generalization-mistral.yaml  overfit_split.yaml  recon-overfit.yaml  recon-warmup.yaml  sft-mistral.yaml  tiny-plumbing.yaml
configs/runs/: example-full_ft-qwen1.5b-financial.yaml  (+2 more)
docs/: gated-models-setup.md  llm_optimizations.md  phase-0-findings.md  phase-0-sprint-plan.md  phase-0.5-ablation-study.md  phase-0.5-findings.md  phase-0.5-sprint-plan.md  phase-1-findings.md  phase-1-sprint-plan.md  phase-2-hypernet-sizing-options.md  phase-2-sprint-plan.md  status_phase_2_06_25_2026.md
results/: comparison.csv  comparison.md  comparison.parquet
scripts/: benchmark.py  build_table.py  build_task_manifest.py  check_data.py  eval.py  eval_gen.py  eval_hypernet.py  overnight_phase05.sh  phase1_finalize.py  phase1_full_sweep.sh  phase1_library.py  phase2_meta_train.py  phase2_relock_split.py  phase2_size_report.py  phase2_smoke.py  plot_phase05.py  reload_check.py  run_matrix.py  run_phase05_matrix.py  smoke_offload.py  smoke_paged8bit.py  smoke_test.py  train.py  train_generalization.py  train_reconstruction.py  train_sft.py
tests/: test_config.py  test_data.py  test_eval.py  test_harness.py  test_phase1_library.py  test_phase2_hypernet.py  test_trainer.py  test_vram.py
(+110 files in other folders)
