[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lora_lab"
version = "0.0.1"
description = "Text-to-LoRA hypernetwork: reconstruction + SFT training/eval."
requires-python = ">=3.11"
# Runtime deps are pinned in requirements.txt / environment.yml (the torch
# family needs the cu128 wheel index, which pyproject can't express cleanly).
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "gpu: tests that require a CUDA device",
]
